# probabilistic-haskell

./: .gitignore
figaro/linear-regression/: .gitignore  README.md  build.sbt
figaro/linear-regression/src/main/scala/coinflip/: CoinFlip.scala
figaro/linear-regression/src/main/scala/regression/: Regression.scala
logs/: cook-meeting-4-23.tex  distribution-type-experiment.org  distribution-type-experiment.tex  language-plan.tex  naive-bayes.tex  plan.org  plan.tex  rethink-structure.org  structure.tex  todo.org
logs/archive/: language-plan.tex
naive-bayes/: naive-bayes.cabal
naive-bayes/data/: csv_test.csv
naive-bayes/src/: Main.hs  Revised.hs
notes/: Learning PyMC3.ipynb  links.org  monad-notes.tex  ppp-pfeiffer.org
notes/aima-norvig/: probabilistic-reasoning-ch14.tex  uncertainty-ch13.tex
notes/papers/: slc-mpd-pfeiffer.org
probability/: probability.cabal
probability/app/: Main.hs  Monads.hs  NaiveBayes.hs  Relabel.hs  Scratch.hs
probability/src/: Coin.hs  Distribution.hs  Element.hs  Factor.hs  Inference.hs  Node.hs  Probability.hs  Sampling.hs  StateUniverse.hs  Universe.hs  VariableElimination.hs
probability/test/: FactorTest.hs  NodeTest.hs  UniverseTest.hs  VariableEliminationTest.hs
python-probability/src/: probability.py
