name:                probability
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/probability#readme
license:             BSD3
license-file:        LICENSE
author:              Dhruv Rajan
maintainer:          dhruv@krishnaprem.com
copyright:           2017 Dhruv Rajan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Distribution, Element, Inference, Factor
  build-depends:       base >= 4.7 && < 5
                     , statistics
                     , containers
                     , random
                     , hmatrix
                     , bimap
  default-language:    Haskell2010

executable probability-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , probability
                     , mtl
  default-language:    Haskell2010

test-suite probability-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/probability
